# deterministic-replay-cpp-engine

./: README.md  pyproject.toml
docs/: architecture.md  benchmark-plan.md  cpp-interface.md  recruiter-brief.md  research-note.md
src/deterministic_replay_cpp_engine/: __init__.py  replay.py
tests/: test_docs_contract.py  test_replay.py
